--- a/Client/Views/LoginWindow.xaml
+++ b/Client/Views/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="450" Width="800">
+        Title="Rate This Stuff - Login" Height="450" Width="800">
     <Grid Margin="100,30,100,30">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.2*"></RowDefinition>
