--- a/Client/Views/StartPage.xaml
+++ b/Client/Views/StartPage.xaml
@@ -4,12 +4,27 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Client.Views"
+      xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="StartPage">
+      Title="Start"
+      Name="start"
+      Background="#EEEFFF">
 
-    <StackPanel>
-        <TextBox FontSize="20" Background="Thistle">Bitte wählen Sie eine Kategorie aus!</TextBox>
-        <ListView></ListView>
+    <StackPanel Margin="5">
+        <TextBox FontSize="20" Background="#D5D5FE">Bitte wählen Sie eine Kategorie aus!</TextBox>
+        <ListView ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory}">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <i:InvokeCommandAction Command="{Binding CategorySelectedCommand}"></i:InvokeCommandAction>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" FontSize="20"></TextBlock>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </StackPanel>
 </Page>
+
