--- a/Client/Controls/Rating.xaml
+++ b/Client/Controls/Rating.xaml
@@ -10,7 +10,7 @@
         <Grid.Resources>
             <ControlTemplate x:Key="ratingtemplate" TargetType="{x:Type ToggleButton}">
                 <Viewbox>
-                    <Path Name="star" Fill="White"
+                    <Path Name="star" Fill="BlanchedAlmond" Stroke="Black" StrokeThickness="3"
                           Data="F1 M 145.637,174.227L 127.619,110.39L 180.809,70.7577L 114.528,68.1664L 93.2725,5.33333L 70.3262,67.569L 4,68.3681L 56.0988,109.423L 36.3629,172.75L 91.508,135.888L 145.637,174.227 Z" />
                 </Viewbox>
                 <ControlTemplate.Triggers>
@@ -28,15 +28,15 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <ToggleButton Grid.Column="0" Tag="1" Cursor="Pen" Template="{StaticResource ratingtemplate}"
+        <ToggleButton Grid.Column="0" Tag="1"  Template="{StaticResource ratingtemplate}"
                       Click="ClickEventHandler" />
-        <ToggleButton Grid.Column="1" Tag="2" Cursor="Pen" Template="{StaticResource ratingtemplate}"
+        <ToggleButton Grid.Column="1" Tag="2" Template="{StaticResource ratingtemplate}"
                       Click="ClickEventHandler" />
-        <ToggleButton Grid.Column="2" Tag="3" Cursor="Pen" Template="{StaticResource ratingtemplate}"
+        <ToggleButton Grid.Column="2" Tag="3" Template="{StaticResource ratingtemplate}"
                       Click="ClickEventHandler" />
-        <ToggleButton Grid.Column="3" Tag="4" Cursor="Pen" Template="{StaticResource ratingtemplate}"
+        <ToggleButton Grid.Column="3" Tag="4" Template="{StaticResource ratingtemplate}"
                       Click="ClickEventHandler" />
-        <ToggleButton Grid.Column="4" Tag="5" Cursor="Pen" Template="{StaticResource ratingtemplate}"
+        <ToggleButton Grid.Column="4" Tag="5" Template="{StaticResource ratingtemplate}"
                       Click="ClickEventHandler" />
 
     </Grid>
