--- a/Client/Views/CategoryManagementPage.xaml
+++ b/Client/Views/CategoryManagementPage.xaml
@@ -1,21 +1,25 @@
 ﻿<Page x:Class="Client.Views.CategoriesManagementPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Client.Views"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Kategorieverwaltung">
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
-        <DataGrid ItemsSource="{Binding Categories}" AutoGenerateColumns="False" FontSize="15"
-                  GridLinesVisibility="Horizontal" IsReadOnly="True" RowHeight="30"
-                  SelectedItem="{Binding SelectedCategory}">
+        <DataGrid Name="DataGrid1"
+                  ItemsSource="{Binding Categories}"
+                  SelectedItem="{Binding SelectedCategory}"
+                  AutoGenerateColumns="False" FontSize="15"
+                  IsReadOnly="True"
+                  SelectionMode="Single"
+                  GridLinesVisibility="Horizontal" RowHeight="30">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Width="*" Binding="{Binding Name}" />
             </DataGrid.Columns>
@@ -38,8 +42,8 @@
             </Grid.Resources>
             <DockPanel Grid.Row="0" Width="300">
                 <Label BorderThickness="0,0,0,3" BorderBrush="DarkGray" Height="30" Width="110">Name</Label>
-                <TextBox Text="{Binding SelectedCategory.Name}" BorderThickness="0,0,0,3" Height="30"
-                         IsReadOnly="{Binding EditMode}" />
+                <TextBox Text="{Binding SelectedCategory.Name, Mode=TwoWay}" BorderThickness="0,0,0,3" Height="30"
+                         IsReadOnly="{Binding EditMode, Mode=TwoWay}" />
             </DockPanel>
         </Grid>
     </Grid>
