--- a/Client/Views/StartPage.xaml
+++ b/Client/Views/StartPage.xaml
@@ -1,30 +1,35 @@
 ﻿<Page x:Class="Client.Views.StartPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Client.Views"
       xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Start"
-      Name="start"
       Background="#EEEFFF">
 
-    <StackPanel Margin="5">
-        <TextBox FontSize="20" Background="#D5D5FE">Bitte wählen Sie eine Kategorie aus!</TextBox>
-        <ListView ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory}">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="SelectionChanged">
-                    <i:InvokeCommandAction Command="{Binding CategorySelectedCommand}"></i:InvokeCommandAction>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Name}" FontSize="20"></TextBlock>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5*"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <StackPanel Margin="5">
+            <TextBox FontSize="20" Background="#D5D5FE">Bitte wählen Sie eine Kategorie aus!</TextBox>
+            <ListView ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <i:InvokeCommandAction Command="{Binding CategorySelectedCommand}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Name}" FontSize="20" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackPanel>
+        <Button Grid.Row="1" Margin="400,20,50,20" FontSize="15" Background="#D5D5FE" Command="{Binding PasswordResetCommand}">Passwort ändern</Button>
+    </Grid>
 </Page>
-
